finished open api spec
